# super-e-translator

./: .gitignore  README.md  config.example.toml  install-macos.sh  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-05-01-translator.md
docs/superpowers/specs/: 2026-05-01-translator-design.md
scripts/: probe_models.py
src/translator/: _popup_gtk.py  _popup_tk.py  cli.py  cli_image.py  clipboard.py  config.py  detect.py  minimax.py  notify.py  popup.py  screenshot.py
tests/: test_clipboard.py  test_config.py  test_detect.py  test_minimax.py  test_notify.py  test_screenshot.py
