[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "translator"
version = "0.1.0"
description = "Super+E hotkey translator for Ubuntu, powered by MiniMax"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.scripts]
translator = "translator.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[tool.hatch.build.targets.wheel]
packages = ["src/translator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
